name:                cless
version:             0.1.0.0
synopsis:            Colorized LESS
description:         Print file contents with syntax highlighting
homepage:            http://github.com/tanakh
license:             MIT
license-file:        LICENSE
author:              Hideyuki Tanaka
maintainer:          tanaka.hideyuki@gmail.com
copyright:           (c) 2015 Hideyuki Tanaka
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable cless
  main-is:             Main.hs

  build-depends:       base >=4.7 && <4.8
                     , highlighting-kate >=0.5
                     , wl-pprint-terminfo >=3.7
                     , wl-pprint-extras
                     , terminfo
                     , optparse-applicative >=0.11

  hs-source-dirs:      src
  default-language:    Haskell2010
